--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,8 @@
   </head>
 
   <body>
+    <%= link_to "Home" , root_path %>
+    <%= link_to "Root" , about_path %>
     <%= yield %>
   </body>
 </html>
